# neus2026-labre

./: .env.template  .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh
data/: index.json  math500-concepts.json  math500-concepts.md  openmath-reranked.json  openmath-retrieved.md  openmath.json
pipeline/: 1a_build_knowledge_base.py  1b_normalize_knowledge_base.py  1c_generate_knowledge_base_embeddings.py  2a_concept_extraction.py  2b_generate_concept_embeddings.py  3_hybrid_retrieval.py  4_cross_encoder_reranking.py  5_run_experiment.py  5_run_experiments_batch.py  6_extract_results.py  7a_plot_lines_bubbles.py  7a_plot_lines_bubbles_batch.py  7b_plot_heatmaps.py
plots/: heatmap_accuracy-by-level_best-of-n.csv  heatmap_accuracy-by-level_greedy.csv  heatmap_accuracy-by-type_best-of-n.csv  heatmap_accuracy-by-type_greedy.csv  heatmap_attempts-by-level_best-of-n.csv  heatmap_attempts-by-type_best-of-n.csv  lines-bubbles_best-of-n_1_all.csv  lines-bubbles_best-of-n_2_all.csv  lines-bubbles_best-of-n_3_all.csv  lines-bubbles_best-of-n_4_all.csv  lines-bubbles_best-of-n_5_all.csv  lines-bubbles_best-of-n_all_all.csv  lines-bubbles_greedy_1_all.csv  lines-bubbles_greedy_2_all.csv  lines-bubbles_greedy_3_all.csv  lines-bubbles_greedy_4_all.csv  lines-bubbles_greedy_5_all.csv  lines-bubbles_greedy_all_all.csv
prompts/: templates.yaml
results/: experiment_gemma2-2b_baseline_best-of-n_260204_1918.md  experiment_gemma2-2b_baseline_greedy_260204_1607.md  experiment_gemma2-2b_openmath_best-of-n_0.0_260204_2148.md  experiment_gemma2-9b_baseline_best-of-n_260207_1151.md  (+63 more)
(+47 files in other folders)
